--- a/class-example/package.json
+++ b/class-example/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.11.10",
+    "@apollo/client": "3.11",
     "graphql": "^16.11.0",
     "next": "14.2.16",
     "react": "^18",
