--- a/class-example/package.json
+++ b/class-example/package.json
@@ -10,7 +10,9 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.1",
     "@apollo/client": "3.11",
+    "antd": "~5.20.6",
     "graphql": "^16.11.0",
     "next": "14.2.16",
     "react": "^18",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "6.0.0",
+    "@graphql-codegen/client-preset": "5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -25,7 +28,6 @@
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@graphql-codegen/client-preset": "5.0.0"
+    "typescript": "^5"
   }
 }
