--- a/class-example/package.json
+++ b/class-example/package.json
@@ -16,6 +16,7 @@
     "graphql": "^16.11.0",
     "next": "14.2.16",
     "react": "^18",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
