--- a/class-practice/package.json
+++ b/class-practice/package.json
@@ -17,7 +17,8 @@
     "next": "14.2.16",
     "react": "^18",
     "react-daum-postcode": "^3.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-infinite-scroll-component": "~6.1.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "6.0.0",
