--- a/class-practice/package.json
+++ b/class-practice/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.1",
     "@apollo/client": "3.11",
+    "@supabase/supabase-js": "^2.57.4",
     "antd": "~5.20.6",
     "graphql": "^16.11.0",
     "next": "14.2.16",
