--- a/class-practice/package.json
+++ b/class-practice/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "3.11",
     "@supabase/supabase-js": "^2.57.4",
     "antd": "~5.20.6",
+    "apollo-upload-client": "^18.0.1",
     "graphql": "^16.11.0",
     "next": "14.2.16",
     "react": "^18",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "6.0.0",
     "@graphql-codegen/client-preset": "5.0.0",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
