--- a/class-practice/package.json
+++ b/class-practice/package.json
@@ -16,6 +16,7 @@
     "antd": "~5.20.6",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.11.0",
+    "lodash": "^4.17.21",
     "next": "14.2.16",
     "react": "^18",
     "react-daum-postcode": "^3.2.0",
@@ -26,6 +27,7 @@
     "@graphql-codegen/cli": "6.0.0",
     "@graphql-codegen/client-preset": "5.0.0",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
