--- a/class-practice/package.json
+++ b/class-practice/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-daum-postcode": "^3.2.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.63.0",
     "react-infinite-scroll-component": "~6.1.0",
     "zustand": "^5.0.8"
   },
