--- a/class-practice/package.json
+++ b/class-practice/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.1",
     "@apollo/client": "3.11",
+    "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.57.4",
     "antd": "~5.20.6",
     "apollo-upload-client": "^18.0.1",
@@ -23,6 +24,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.63.0",
     "react-infinite-scroll-component": "~6.1.0",
+    "zod": "^4.1.11",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
