--- a/class-practice/package.json
+++ b/class-practice/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.63.0",
     "react-infinite-scroll-component": "~6.1.0",
+    "react-window": "1.8.10",
     "uuid": "^13.0.0",
     "zod": "^4.1.11",
     "zustand": "^5.0.8"
@@ -44,6 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "jest": "^30.2.0",
