--- a/class-practice/package.json
+++ b/class-practice/package.json
@@ -20,6 +20,7 @@
     "antd": "~5.20.6",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.11.0",
+    "graphql-request": "^7.3.4",
     "lodash": "^4.17.21",
     "next": "14.2.16",
     "react": "^18",
