--- a/supplement/section33/01-mfe/remote-product/package.json
+++ b/supplement/section33/01-mfe/remote-product/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^8.8.18",
+    "@module-federation/nextjs-mf": "8.8.18",
     "next": "14.2.33",
     "react": "^18",
     "react-dom": "^18",
-    "webpack": "^5.103.0"
+    "webpack": "5.98.0"
   },
   "devDependencies": {
     "@types/node": "^20",
